<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/pumpField"
        android:layout_toStartOf="@+id/pumpField"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/peltier_power_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:id="@+id/label1"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:textAlignment="center" />

            <TextView
                android:text="N/A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:id="@+id/peltierTextField"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_below="@+id/label1"
                android:layout_alignRight="@+id/label1"
                android:layout_alignEnd="@+id/label1"
                android:layout_alignLeft="@+id/label1"
                android:layout_alignStart="@+id/label1" />

            <TextView
                android:text="@string/pump_power_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/peltierTextField"
                android:layout_marginTop="28dp"
                android:id="@+id/textView3"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textSize="24sp"
                android:layout_alignRight="@+id/peltierTextField"
                android:layout_alignEnd="@+id/peltierTextField"
                android:layout_alignLeft="@+id/peltierTextField"
                android:layout_alignStart="@+id/peltierTextField" />

            <TextView
                android:text="N/A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="17dp"
                android:id="@+id/pumpField"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_alignRight="@+id/textView3"
                android:layout_alignEnd="@+id/textView3"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3" />

            <TextView
                android:text="@string/therm1_temp_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:id="@+id/textView5"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:layout_below="@+id/pumpField"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="N/A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/therm1TempField"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="16dp"
                android:layout_alignRight="@+id/textView5"
                android:layout_alignEnd="@+id/textView5"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:text="@string/therm2_temp_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/therm1TempField"
                android:layout_marginTop="25dp"
                android:id="@+id/textView2"
                android:layout_alignRight="@+id/therm1TempField"
                android:layout_alignEnd="@+id/therm1TempField"
                android:layout_alignLeft="@+id/therm1TempField"
                android:layout_alignStart="@+id/therm1TempField"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textSize="24sp" />

            <TextView
                android:text="N/A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="17dp"
                android:id="@+id/therm2TempField"
                android:textAlignment="center"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2"
                android:layout_toEndOf="@+id/scrollView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:textSize="24sp" />

            <TextView
                android:text="@string/therm3_temp_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/therm2TempField"
                android:layout_marginTop="22dp"
                android:id="@+id/textView6"
                android:layout_alignRight="@+id/therm2TempField"
                android:layout_alignEnd="@+id/therm2TempField"
                android:layout_alignLeft="@+id/therm2TempField"
                android:layout_alignStart="@+id/therm2TempField"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:textSize="24sp" />

            <TextView
                android:text="N/A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="21dp"
                android:id="@+id/therm3TempField"
                android:layout_alignRight="@+id/textView6"
                android:layout_alignEnd="@+id/textView6"
                android:layout_toEndOf="@+id/scrollView2"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:text="@string/ir_temp_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/therm3TempField"
                android:layout_marginTop="15dp"
                android:id="@+id/textView8"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:layout_alignRight="@+id/therm3TempField"
                android:layout_alignEnd="@+id/therm3TempField"
                android:layout_toEndOf="@+id/scrollView3"
                android:layout_alignLeft="@+id/therm3TempField"
                android:layout_alignStart="@+id/therm3TempField"
                android:textSize="24sp" />

            <TextView
                android:text="N/A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/irTempField"
                android:layout_below="@+id/textView8"
                android:layout_marginTop="15dp"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_alignRight="@+id/pumpField"
                android:layout_alignEnd="@+id/pumpField"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignStart="@+id/textView8" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>