<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.captstone.bloodcoolingmonitor.MainActivity">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/Controls"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/timer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/timerLabel"
                            android:textSize="30sp"
                            android:textAlignment="center"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="42dp" />

                        <TextView
                            android:text="00:03:00"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/timerTextView"
                            android:textAlignment="center"
                            android:textSize="36sp"
                            android:layout_marginTop="19dp"
                            android:layout_below="@+id/timerLabel"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true" />

                        <Button
                            android:text="@string/start"
                            android:layout_height="wrap_content"
                            android:id="@+id/startStop"
                            android:layout_width="150dp"
                            android:layout_marginTop="17dp"
                            android:layout_below="@+id/timerTextView"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_marginLeft="12dp"
                            android:layout_marginStart="12dp" />

                        <Button
                            android:text="@string/reset"
                            android:layout_height="wrap_content"
                            android:id="@+id/reset"
                            android:layout_width="150dp"
                            android:layout_alignBaseline="@+id/startStop"
                            android:layout_alignBottom="@+id/startStop"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                        <TextView
                            android:text="@string/status_disconnected"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/statusLabel"
                            android:layout_below="@+id/startStop"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="22dp"
                            android:textSize="18sp"
                            android:textStyle="normal|bold" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Sensors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/sensor_layout"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent" />

                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
